@@ -34,6 +34,8 @@ publisher:
     channel:                                    
   rss:
     file:
+  campfire:
+    url:
 scm:
   type:
   url:
