@@ -1,8 +1,8 @@
-require 'active_support'
-
 module Cerberus
   HOME = File.expand_path(ENV['CERBERUS_HOME'] || '~/.cerberus')
   CONFIG_FILE = "#{HOME}/config.yml"
 
-  LOCK_WAIT = 30.minutes
+  LOCK_WAIT = 30 * 60 #30 minutes
+
+  VERSION = '0.3.0'
 end
