@@ -1,5 +1,0 @@
-module Cerberus
-  module VERSION #:nodoc:
-    STRING = '0.2.5'
-  end
-end
